# Ejercicios_Modulo_3

./: Ejercicio1.py  Ejercicio10.py  Ejercicio11.py  Ejercicio12.py  Ejercicio13.py  Ejercicio14.py  Ejercicio15.py  Ejercicio2.py  Ejercicio3.py  Ejercicio4.py  Ejercicio5.py  Ejercicio6.py  Ejercicio7.py  Ejercicio8.py  Ejercicio9.py  pyproject.toml
test/: test_Ejercicio1.py  test_Ejercicio10.py  test_Ejercicio11.py  test_Ejercicio12.py  test_Ejercicio13.py  test_Ejercicio14.py  test_Ejercicio15.py  test_Ejercicio2.py  test_Ejercicio3.py  test_Ejercicio4.py  test_Ejercicio5.py  test_Ejercicio6.py  test_Ejercicio7.py  test_Ejercicio8.py  test_Ejercicio9.py
